--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ find_package(Qt5Widgets)
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED ON)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
-find_package(Boost COMPONENTS regex) 
+find_package(Boost COMPONENTS regex system filesystem) 
 
 include_directories(${Boost_INCLUDE_DIRS}) 
 
