Get more tests/ui working!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ find_package(Boost COMPONENTS regex system filesystem REQUIRED)
 include_directories(${Boost_INCLUDE_DIRS})
 LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 
-set (GuiLib_src ${PROJECT_SOURCE_DIR}/main_window.cpp ${PROJECT_SOURCE_DIR}/ui/DisassemblyModel.cpp)
-set (GuiLib_hdr ${PROJECT_SOURCE_DIR}/main_window.h ${PROJECT_SOURCE_DIR}/ui/DisassemblyModel.h)
-set (GuiLib_ui  ${PROJECT_SOURCE_DIR}/main_window.ui)
+set (GuiLib_src ${PROJECT_SOURCE_DIR}/ui/main_window.cpp ${PROJECT_SOURCE_DIR}/ui/DisassemblyModel.cpp ${PROJECT_SOURCE_DIR}/ui/badgerio.cpp)
+set (GuiLib_hdr ${PROJECT_SOURCE_DIR}/ui/main_window.h ${PROJECT_SOURCE_DIR}/ui/DisassemblyModel.h ${PROJECT_SOURCE_DIR}/ui/badgerio.h)
+set (GuiLib_ui  ${PROJECT_SOURCE_DIR}/ui/main_window.ui)
 set (GuiBin_src ${PROJECT_SOURCE_DIR}/main.cpp)
 
 qt5_wrap_cpp(GuiLib_hdr_moc ${GuiLib_hdr})
@@ -38,7 +38,8 @@ set(Z80_SRC
     Z80/IO.cpp Z80/IO.h Z80/TestIO.h Z80/TestIO.cpp
     Z80/BaseProcessor.cpp Z80/BaseProcessor.h
     Z80/baseprocessordecoder.cpp Z80/baseprocessordecoder.h
-    Z80/badgerio.cpp Z80/badgerio.h  Z80/BadgerMemory.cpp Z80/BadgerMemory.h
+#     Z80/badgerio.cpp Z80/badgerio.h
+    Z80/BadgerMemory.cpp Z80/BadgerMemory.h
     Logger.cpp Logger.h
 )
 
@@ -54,7 +55,7 @@ add_library (GuiLib STATIC
 
 qt5_use_modules(GuiLib Widgets)
 
-set(tooltests_SRC tools/Test.cpp)
+set(tooltests_SRC tests/Test.cpp)
 
 add_executable(cpuqt2 ${GuiBin_src} ${Z80_SRC})
 
